<resources>
    <string name="app_name">FIXX</string>

    <string name="category1">설명</string>

    <string name="caution">주의</string>
    <string name="caution_summary">중요한 자료가 있는 경우 미리 백업해주십시오.\n이 앱으로 인한 피해는 개발자가 책임지지 않습니다.</string>

    <string name="calllog">통화목록 확인</string>
    <string name="calllog_summary">%1$d개 중 %2$d개의 오류항목이 있습니다.</string>
    <string name="calllog_null">통화목록이 없습니다.</string>
    <string name="calllog_notfound">오류항목이 없습니다.</string>

    <string name="sim_slots">내 휴대전화 번호</string>

    <string name="category2">FIX!</string>
    <string name="fix">오류항목 변환</string>
    <!--<string name="fix_summary">통화목록 중 VoLTE 버그로 인한 오류항목을 변환합니다.</string>-->

    <string name="category3">미구현</string>
    <string name="auto_fix">자동 변환</string>
    <string name="auto_fix_summary">수신전화 종료시 자동으로 오류항목을 변환합니다.</string>

    <string name="incomingcall">수신전화 알림</string>
    <string name="incomingcall_summary">전화 수신시 VoLTE 버그로 인해 전화번호 표기에 오류가 있을경우\n수정된 전화번호를 오버레이로 보여줍니다.</string>

    <string name="inapp">인앱결제를 해야합니다.</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="action_settings">Settings</string>

    <string name="hello_world">Hello world!</string>

    <!-- -
        This is an ad unit ID for a banner test ad. Replace with your own banner ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="banner_ad_unit_id">ca-app-pub-8156203968117327/6527260164</string>

</resources>
